# ggz

./: README.md
base-libs/: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  README.client  autogen.sh  configure.ac  ggzcore.pc.in  ggzmod.pc.in  libggz.pc.in
base-libs/desktop/: Makefile.am  ggz.directory
base-libs/ggz-config/: ggz-config.c
base-libs/ggzcore/: Doxyfile  Makefile.am  conf.c  conf.h  game.c  game.h  gametype.c  gametype.h  ggzcore-ggz.h  ggzcore.h  ggzcore_mainloop.c  ggzcore_mainloop.h  hook.c  hook.h  init.c  linker.map  module.c  module.h  net.h  netxml.c  player.c  player.h  protocol.h  room.c  room.h  server.c  server.h  state.c  state.h  table.c  table.h
base-libs/ggzmod/: Doxyfile  Makefile.am  ggzmod.c  ggzmod.h  io.c  io.h  linker.map  mod.h  protocol.h
base-libs/ggzmod-ggz/: ggzmod-ggz.c  ggzmod-ggz.h  io-ggz.c  io-ggz.h  mod-ggz.h  protocol.h
base-libs/libggz/: Doxyfile  Makefile.am  conf.c  easysock.c  ggz.h  ggz_common.c  ggz_common.h  ggz_dio.c  ggz_dio.h  ggz_threads.h.in  linker.map  list.c  memory.c  misc.c  misc.h  msg.c  numberlist.c  stack.c  support.h  uri.c  xmlelement.c
base-libs/m4/: gc.m4  tls.m4
base-libs/man/: ggz.h.3  ggzcore_h.3.in  ggzmod_h.3.in
base-libs/po/: Makefile.am
base-libs/tests/: Makefile.am  debugmsg.c  debugmsg.correct  dio.c  ggzcommon.c  hashing.c  misc.c  read_line.c  test16.c
docs/: .cvsignore  ChangeLog  INSTALL  Makefile.am  NEWS  QuickStart.GGZ  README  TODO  autogen.sh  configure.ac  configure.in  texi2text.pl
docs/articles/: Makefile.am  instantgaming.html
docs/coreclients/: Makefile.am  coreclients.html  corefeatures.html  ggz-txt-handbook.de.html  ggz-txt-handbook.html  ggzcore.flw  playing.flw
docs/debian/: .cvsignore  README.Debian  changelog  control  copyright  postinst  prerm  rules
docs/games/: Makefile.am  features.html  games-history.html  games.html  savegames.txt
docs/ggz-project/: GGZ-contributions  Internationalization  Makefile.am  Roadmap  Versioning  branches.flw  buildsystem  cvs-modules.txt  ggz-dependencies  hacking  packagers  promo.txt  release-procedure  security-and-privacy  svn-modules.txt
docs/grubby/: Makefile.am  admin-manual.html  architecture.html  grubby-arch.flw  user-manual.de.html  user-manual.en.html  user-manual.html
docs/intro/: Makefile.am  index.html
docs/overview/: Makefile.am  ggzbig.html  index.de.html  index.html
docs/presentation/: README.talks
docs/server/: Makefile.am
docs/spec/: .cvsignore  Makefile  Makefile.am  Uri-spec.txt  appendix.sgml  bodytags1.cnxml  client-server.sgml  design.sgml  modules.sgml  overview.sgml  spec.cnxml  spec.css  spec.xml  spec.xsl
easysock/: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  configure.in  easysock.c  easysock.h  easysock.h.in  easysock.spec  libeasysock.spec
easysock/debian/: README.Debian  changelog  control  copyright  docs  postinst  rules
ggz/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  acconfig.h  autogen.sh  configure.in  ggz_client.spec
ggz-client-libs/: .cvsignore  AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile.am  NEWS  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  configure.ac  configure.in  ggz-client-libs.spec  ggzcore.pc.in  ggzmod.pc.in
ggz-client-libs/debian/: .cvsignore  README.Debian  changelog  control  copyright  libggzcore-dev.docs  libggzcore-dev.files  libggzcore1.conffiles  libggzcore1.files  libggzmod-dev.files  libggzmod0.files  postinst  preinst  rules  shlibs
ggz-client-libs/desktop/: Makefile.am  ggz-games.directory  ggz.menu
ggz-client-libs/ggz-config/: .cvsignore  Makefile.am  ggz-config.c  readme.ggzconfig
ggz-client-libs/ggz-wrapper/: .cvsignore  Makefile.am  README.wrapper  game.c  game.h  ggz  ggz-wrapper.c  loop.c  loop.h  server.c  server.h
ggz-client-libs/ggzcore/: .cvsignore  Doxyfile  Makefile.am  TODO  conf.c  conf.h  game.c  game.h  gametype.c  gametype.h  ggzcore-ggz.h  ggzcore.h  hook.c  hook.h  init.c  linker.map  module.c  module.h  net.h  netxml.c  player.c  player.h  room.c  room.h  server.c  server.h  state.c  table.c  user.c
ggz-client-libs/ggzmod/: .cvsignore  Doxyfile  Makefile.am  Makefile.in  Makefile.msys.in  ggz.c  ggz_client.h  ggzmod-ggz.h  ggzmod.c  ggzmod.h  io.c  io.h  mod.h  (+1 more)
ggz-client-libs/ggzmod-ggz/: .cvsignore  Makefile.am  ggzmod-ggz.c  ggzmod-ggz.h  io-ggz.c  io-ggz.h  mod-ggz.h  protocol.h
ggz-txt-client/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  QuickStart.GGZ  README  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  ggz-txt.desktop
ggzd/: .cvsignore  AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile.am  NEWS  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  autogen.sh  configure.ac  configure.in  ggz_server.spec  ggzdmod.pc.in
gnome-client/: .cvsignore  ChangeLog  Makefile.am  QuickStart.GGZ  README  README.GGZ  acconfig.h  aclocal.m4  autogen.sh  configure.ac  configure.in  ggz-gnome.desktop  ggz-gnome.schemas  motd-editor.desktop
grubby/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  QuickStart.GGZ  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  autogen.sh  configure.ac  configure.in
gtk-client/: .cvsignore  ChangeLog  ChangeLog.games  Makefile.am  NEWS  QuickStart.GGZ  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  autogen.sh  configure.ac  configure.in  ggz-gtk-client.spec  ggz-gtk.desktop
gtk-games/: .cvsignore  ChangeLog  Makefile.am  NEWS  README  configure.ac
kde-center/: CMakeLists.txt  ChangeLog  INSTALL  QuickStart.GGZ  README  TODO  config.h.cmake
kde-client/: .cvsignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  am_edit  autogen.sh  configure.ac  configure.in  ggz-kde-client.spec
kde-games/: .cvsignore  ChangeLog  INSTALL  Makefile.am  README  README.GGZ  TODO  acconfig.h  acinclude.ggz  acinclude.kde  acinclude.m4  aclocal.m4  am_edit  autogen.sh  config.h.bot  config.h.in  configure  configure.ac  configure.in  configure.in.in  ggz-kde-games.spec  kde-games.stdio  subdirs
(+6137 files in other folders)
